# VirtualPresence_Nao_OSVR_LEAP

./: README.md  README.md~
LEAP_dev/: LEAP  Makefile  log.txt  prueba.cpp  readme~  server  server_main.cpp  sockets.cpp
Leap_Libraries/: Makefile
Legacy/LEAP_dev/: Makefile  Sockets.h  prueba.cpp  server
Legacy/NAO_Server/movehead/: Sockets.h  almotion_setangles.cpp
Legacy/NAO_Server/movehead/build-crosstoolchain/: CMakeCache.txt  cmake_install.cmake
Legacy/OSVR codes/: TrackerState.cpp
Legacy/PC_Client/: LeapUtilGL.cpp  Makefile  Sockets.h  prueba.cpp
Legacy/Sockets/: sockets.cpp
Legacy/Sockets/SocketsTCPportOpen/: Makefile
NAO_Server/: Sockets.h  sayhelloworld.cpp
NAO_Server/movehead/: almotion_setangles.cpp  sockets.cpp
NAO_Server/movehead/build-crosstoolchain/: CMakeCache.txt  Makefile  dependencies.cmake
Nao_Example/: CMakeLists.txt  sayhelloworld.cpp
OSVR codes/: TrackerState.cpp
PC_Client/: server_main.cpp
Puppeteer/CommLib/: Sockets.cpp  Sockets.h
Puppeteer/CommLib/Example/: Client  README  README~  Server  client_main.cpp  makefile  server_main.cpp
Puppeteer/LEAP/: GESTOS  LEAP  LEAP_SERVICE  LeapService.cpp  LeapService.cpp~  Makefile  Makefile~  PuppetGestures.cpp  gestos.cpp  gestos.cpp~  prueba.cpp~
Puppeteer/LEAP/Gestures_Samples/: openHand_Both.csv  openHand_Both_Soro.csv  openHand_Left.csv  openHand_Left_Soro.csv  openHand_Right.csv  openHand_Right_Soro.csv
Puppeteer/LEAP/Results/: .~lock.openHand_Both.ods#  openHand_Both.ods  openHand_Both_Soro.ods  openHand_Left.ods  openHand_Left_Soro.ods  openHand_Right.ods  openHand_Right_Soro.ods
Puppeteer/NAO/Puppet/: Puppet.cpp~  Sockets.h~  TaskLib.cpp
Puppeteer/NAO/Puppet/build-puppeteerTC/: Makefile
Puppeteer/NAO/Server/: vision_Puppeteer.py
Puppeteer/NAO/Server/Movehead/: CMakeLists.txt  make.sh  movehead.cpp  qiproject.xml
Puppeteer/NAO/Server/Puppet/: CMakeLists.txt  Puppet.cpp  TaskLib.cpp  TaskLib.h  make.sh  qiproject.xml
Puppeteer/NAO/Server/movehead/build-puppeteerTC/: CMakeCache.txt  Makefile
Puppeteer/NAO/Video/: vision_showimages.py
Puppeteer/NAO/Video/build-puppeteerTC/: Makefile  cmake_install.cmake
Puppeteer/Nao/Server/Puppet/: CMakeLists.txt  Puppet.cpp  TaskLib.cpp  TaskLib.h  qiproject.xml
Puppeteer/Nao/Server/Puppet/build-puppeteerTC/: CMakeCache.txt  cmake_install.cmake  dependencies.cmake
Puppeteer/Nao/Server/movehead/: CMakeLists.txt  movehead.cpp
Puppeteer/Nao/Server/movehead/build-puppeteerTC/: cmake_install.cmake
Puppeteer/Nao/Server/movehead/build-puppeteerTC/sdk/share/qi/: path.conf
Puppeteer/Nao/Video/: getimages.cpp  vision_showimages.py
Puppeteer/Nao/Video/build-puppeteerTC/: CMakeCache.txt
Puppeteer/OSVR/: README  README~  TrackerState.cpp
Puppeteer/OSVR/sockets/: client  client_main.cpp  server  server_main.cpp  sockets.cpp
Sockets/: Sockets.h  client_main.cpp  server_main.cpp
Sockets/SocketsTCPportOpen/: sockets.cpp
(+3 files in other folders)
